--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -49,7 +49,8 @@ x-airflow-common:
 
 services:
   postgres:
-    image: postgres:17
+    image: postgres:13
+    platform: linux/amd64
     environment:
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
